--- a/public/globals.css
+++ b/public/globals.css
@@ -30,3 +30,11 @@ body {
 		)
 		rgb(var(--background-start-rgb));
 }
+
+.hide-scrollbar {
+	-ms-overflow-style: none; /* Internet Explorer 10+ */
+	scrollbar-width: none; /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+	display: none; /* Safari and Chrome */
+}
