--- a/public/globals.css
+++ b/public/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
 	font-family: 'Core Sans';
-	src: url('/fonts/core-sans.otf') format('opentype');
+	src: url('fonts/core-sans.otf') format('opentype');
 }
 
 :root {
